[tool.poetry]
name = "waxtax"
version = "0.1.0"
description = "A python transaction utility"
authors = ["stuckatsixpm <80179622+stuckatsixpm@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
daltonapi = "^0.3.1"
brython = "^3.9.1"
requests = "^2.25.1"
urllib3 = "^1.26.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
